--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: R-tastic
+subtitle: Where Data meet R and they lived happily ever after
 use-site-title: true
 ---
 
